velero/validate-cron-schedule/.kyverno-test/resources.yaml
---
apiVersion: velero.io/v1
kind: Schedule
metadata:
  name: goodschedule01
spec:
  schedule: 0 7 * * *
  template:
    includedNamespaces:
    - 'default'
---
apiVersion: velero.io/v1
kind: Schedule
metadata:
  name: badschedule01
spec:
  schedule: 0 7 * * * *
  template:
    includedNamespaces:
    - 'default'
