velero/validate-cron-schedule/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-cron-schedule
policies:
- ../validate-cron-schedule.yaml
resources:
- resources.yaml
results:
- kind: Schedule
  policy: validate-cron-schedule
  resources:
  - badschedule01
  result: fail
  rule: validate-cron
- kind: Schedule
  policy: validate-cron-schedule
  resources:
  - goodschedule01
  result: pass
  rule: validate-cron
